# 5sem

db/: MyStart.sql  lab10.sql  lab12.sql  lab13.sql  lab14.sql  lab3.sql  lab3cdb.sql  lab3z7.sql  lab4.docx  lab4.sqll  lab5.sql  lab6.docx  lab6.sql  lab8.sql  notes.sql  Лаб6Ответы.docx  заметки.txt  ответыЛаб2.docx
linux/: OS03_06.c  desktop.ini
linux/lab4/: OS04_11  OS04_11.c
linux/lab5/: OS05_04.cpp  OS05_05.cpp  os05_04  os05_05
linux/linux/: OS03_04  OS03_04.c  OS03_05  OS03_05_01  OS03_06  OS03_06.c  OS03_07  OS03_07.c
linux/os/: OS06_06  OS06_06.c  OS07_05  OS07_05.c  OS07_06  OS07_06.c  OS08_03  OS08_03.c
linux/os/lab09lin/: OS09_01.txt  OS09_05  OS09_05.c  OS09_06  OS09_06.c  OS09_06_1.txt  OS09_06_2.txt  OS09_07  OS09_07.c
linux/sp/: Lab02e.c  Lab02x.c  lab02e  lab02x
linux/sp/lab3/: lab-3b-client  lab-3b-client.c  lab-3b-server  lab-3b-server.c
linux/sp/lab4/: Lab-04  Lab-04.c  Lab-04b  Lab-04b.c
linux/sp/lab5/: Lab-05d  Lab-05e  Lab-05e.c  Lab-05f  Lab-05f.c
linux/sp/lab6/: .goutputstream-H8OFZ2  .goutputstream-LCJEZ2  Lab-06d  Lab-06d.c  Lab-06e  Lab-06f  Lab-06f.c  file.txt  lab6-e.c
linux/sp/lab7/: Lab-07b  Lab-07b.c  test.txt
linux/sp/lab8/Dynamic/: CMakeCache.txt  CMakeLists.txt  Lab-08b  Makefile  cmake_install.cmake
linux/sp/lab8/Dynamic/src/: Lab-08b.c  Mappingd.c  Mappingd.h
linux/sp/lab9/: .goutputstream-S9W6Z2  CMakeCache.txt  CMakeLists.txt  Demon09.c  Makefile  cmake_install.cmake.tmp5de7c  config.cfg  demon09d.service
oc/: lab1.docx  lab2.docx  заметки.docx
oc/OS09/: OC_Лабораторная_работа_09_ФайловаяСистема.docx  OS09.sln  OS09_01.txt
oc/OS09/OS09_01/: OS09_01.cpp  OS09_01.vcxproj
oc/OS09/OS09_02/: OS09_02.cpp  OS09_02.vcxproj
oc/OS09/OS09_03/: OS09_03.cpp  OS09_03.vcxproj
oc/OS09/OS09_04/: OS09_04.cpp  OS09_04.vcxproj
oc/OS09/OS09_05/: OS09_05.cpp  OS09_05.vcxproj  OS09_05.vcxproj.filters
oc/bat/: z03-01.bat  z03-02.bat  z03-03.bat
oc/lab3/: вопросы.docx  отчет.docx
oc/lab4/: lab4.docx
oc/lab5/: lab5.docx
oc/lab6/: lab06.docx
oc/lab8/: отчет.docx
oc/zad/: 2024_OC_Лаб_01_CmdWindows (1).docx  OC_Лабораторная_работа_06_Синхронизация.docx  OC_Лабораторная_работа_07_КомпьютерноеВремя.docx  OC_Лабораторная_работа_08_УправлениеПамятью.docx
pnp/: задание1.docx
pnp/Lab2/: Lab2.sln
pnp/Lab3/: Lab3.sln
pnp/Lab8-10/: Lab8-10.sln
pnp/lab6/: lab6.sln
sp/: ~$ЛР7.docx  ЛР1.docx  ЛР2.docx  ЛР3.docx  ЛР4.docx  ЛР5.docx  ЛР6.docx  ЛР7.docx  ЛР8.docx  ЛР9.docx  Новый текстовый документ.txt  лб3 ответы.docx  лб4ответы.docx  отчет5.docx
sp/lab1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lab1.sln
sp/lab1/lab1/: lab1.c  (+12 more)
sp/lab2/Lab-02c/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Lab-02c.c  build.ninja  cmake_install.cmake
sp/lab2/Lab-02d/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Lab-02d.c  build.ninja  cmake_install.cmake
sp/lab3/Lab-03a-client/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Lab-03a-client.c  build.ninja  cmake_install.cmake
sp/lab3/Lab-03b-client/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Lab-03b-client.c  build.ninja  cmake_install.cmake
sp/lab3/Lab-03b-server/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Lab-03b-server.c  build.ninja  cmake_install.cmake
sp/lab4/Lab-04/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Lab-04.c  build.ninja  cmake_install.cmake
sp/lab4/Lab-04b/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Lab-04b.c  build.ninja  cmake_install.cmake
sp/lab5/: CMakeLists.txt
sp/lab5/Lab-5b/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Lab-05b.c  build.ninja  cmake_install.cmake
sp/lab5/Lab-5c/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Lab-05c.c  build.ninja  cmake_install.cmake
sp/lab6/: test.txt
sp/lab8/: lab8.docx  ~$lab8.docx
sp/lab8/Win/Dynamic/: CMakeLists.txt
sp/lab8/Win/Dynamic/include/: Mappingd-2.h  Mappingd.h  str.h
sp/lab8/Win/Dynamic/src/: Lab-08b.c  Mappingd.def  dllmain-2.c  dllmain.c
sp/lab9/Service09/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Service09.c  build.ninja  cmake_install.cmake
sp/lab9/ServiceCtl/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  ServiceCtrl.c  build.ninja  cmake_install.cmake
tpo/: FuncSpec Android_Кирилл_Ворович.doc  TestCaseTemplate 5.xls  Testing check-list for Lab-2.xlsx  lab-03.docx  lab04.xlsx  lab5.docx  lab6Bugs_template.xlsx
tpo/Lab12/: lab12.docx
tpo/Lab9/: Lab9.sln
tpo/Лабы/: 1 Тестирование требований.docx  2 Тестирование по чек-листу.docx  FuncSpec Android.doc
бжч/: конспект.docx
пскп/lab-10/: Лабораторная_работа_10.docx
пскп/lab4/: 04-01.js  05-01.js  DB.js  index.html  package-lock.json  package.json
пскп/test/: index.html  index.js  package-lock.json  package.json  upload.html
пскп/Лабораторная_работа_01_HELLO_WORLD/: 01-01.js  01-02.js  Лабораторная_работа_01.docx  лб ответы.docx
пскп/Лабораторная_работа_02_ASYNC_REQUESTS/: 02-01.js  02-02.js  02-03.js  02-04.js  02-05.js  02-06.js  02.js  fetch.html  index.html  jquery.html  xmlhttprequest.html  ответы.docx
пскп/Лабораторная_работа_03_GLOBALS_ASYNC/: 03-01.js  03-02.js  03-04.js  03-05.js  index.html  ответы.docx
пскп/Лабораторная_работа_06/: 06-01.js  06-03.js  index.html  package-lock.json  package.json  Лабораторная_работа_06.docx
пскп/Лабораторная_работа_07/: 07-01.js  Лабораторная_работа_07.docx  ответы.docx
пскп/Лабораторная_работа_08_HTTP_SERVER/: 08-00.js  package-lock.json  package.json  Лабораторная_работа_08.docx
пскп/Лабораторная_работа_09_HTTP_CLIENT/: Лабораторная_работа_09.docx
пскп/Лабораторная_работа_10_WS/: package-lock.json
трвп/: lab1.html  Документ Microsoft Word.docx
трвп/lab-05/: ТРВП_Лабораторная_05.docx
трвп/lab-06/: ТРВП_Лабораторная_ 06.docx
трвп/lab2/: WEB5A.js  WEB5B.js  WEB5C.js  index.html  index1.html  index2.html
трвп/lab3/: WEB3A.js  ТРВП_Лабораторная_03.docx
трвп/lab4/: WEB4A.js  ТРВП_Лабораторная_04.docx
(+1078 files in other folders)
